--- a/ibsen.css
+++ b/ibsen.css
@@ -1,26 +1,21 @@
-.Speech {
+.speech {
+  font-family: "Times New Roman", Times, serif;
+  font-size: 14px;
+  color: black;
+}
 
-    font-family:'Times New Roman', Times, serif;
-    font-size: 12px;
-    color: black;
-
-  }
-
-  .direction {
-
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 17px;
+.direction {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 17px;
+  background-color: lightblue;
 }
 
 .name {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 13px;   
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  font-size: 13px;
 }
-   
 
-.direction:hover{
-
-    background-color: lightpink;
-     color: black;
-
+.direction:hover {
+  background-color: rgb(235, 175, 138);
+  color: rgb(104, 137, 13);
 }
