--- a/ibsen.css
+++ b/ibsen.css
@@ -13,7 +13,11 @@
 .name {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   font-size: 13px;
+  border: 1px dotted black;
 }
+.name:hover {
+    color: rgb(21, 188, 49);
+  }
 
 .direction:hover {
   background-color: rgb(235, 175, 138);
@@ -48,4 +52,24 @@ th {
   color: rgb(225, 224, 227);
 
   background-color: darkslategray;
+}
+.HELMER{
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: blueviolet;
+}
+.NORA{
+    text-shadow: rgb(88, 155, 221) 1px 0 10px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: crimson;
+}
+.image{
+    margin: 10px;
+    width: 30%;
+    height: 30%;
+}
+ul,li{
+    list-style-type: none;
+    background-color: darkcyan;
+    float: left;
+    margin: 5px 10px 10px 10px;
 }
