--- a/ibsen.css
+++ b/ibsen.css
@@ -49,9 +49,36 @@
 th {
   font-family: sans-serif;
 
-  color: rgb(225, 224, 227);
+  color: rgb(50, 6, 138);
 
   background-color: darkslategray;
+}
+td {
+    border: 1px solid black;
+    border-collapse: collapse;
+    padding: 5px;
+}
+tr:nth-child(even) {
+    background-color: #b4d3f3;
+}
+tr:nth-child(odd) {
+    background-color: #f9c6f9;
+}
+th {
+    background-image: linear-gradient(
+      45deg,
+      #f0d19c 16.67%,
+      #a3e65f 16.67%,
+      #f7cfdb 33.33%,
+      #fff 33.33%,
+      #fff 50%,
+      #fabea6 50%,
+      #f1c796 66.67%,
+      #f7cfdb 66.67%,
+      #f7cfdb 83.33%,
+      #a4eb91 83.33%,
+      #fff 100%
+    );
 }
 .HELMER{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
