--- a/ibsen.css
+++ b/ibsen.css
@@ -88,6 +88,7 @@ th {
     text-shadow: rgb(88, 155, 221) 1px 0 10px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: crimson;
+    filter: blur(0.5px);
 }
 .image{
     margin: 10px;
